--- a/azure-app-srin.csproj
+++ b/azure-app-srin.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>azure_app_srin</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.22.0" />
+  </ItemGroup>
+
 </Project>
