--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=4f177f20-8fca-445d-b88e-644c24f54b0a;IngestionEndpoint=https://eastus-8.in.applicationinsights.azure.com/;LiveEndpoint=https://eastus.livediagnostics.monitor.azure.com/;ApplicationId=7ba7101d-0d66-43b5-abfb-fb364333364a"
+  },
+  "ConnectionStrings": {
+    "AzureSqlConnction": "Server=tcp:az-webapp-srin.database.windows.net,1433;Initial Catalog=az-webapp-srin;Persist Security Info=False;User ID=sgandikota;Password=Test@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
